# dbk

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  demo.sh  plan.md  pyproject.toml  thresholds.example.json  概要设计文档.md
.github/workflows/: ci.yml  release.yml
dbk/: __init__.py  __main__.py  api_server.py  cli.py  cli_agent.py  cli_tui.py  collector_daemon.py  collectors.py  config.default.toml  config.py  config_loader.py  diagnose.py  models.py  pg_collectors.py  plugins.py  retention.py  runtime_cleanup.py  runtime_cleanup_daemon.py  sdk.py  sdk_config.py  storage.py  thresholds.py  tracing.py  tui.py
dbk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dbk/agent/: __init__.py  core.py  intent.py  memory.py  repl.py  session.py  session_store.py  state.py  subagent.py  tools.py  workflow.py
dbk/alerting/: __init__.py  agent_responder.py  daemon.py  engine.py  models.py  notifiers.py  prometheus.py  store.py
dbk/cli_commands/: __init__.py  adapter.py  agent.py  alert.py  api_server.py  base.py  collect.py  config.py  diagnose.py  init_.py  run.py  runtime.py
dbk/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py  runtime.py
dbk_plugins/: __init__.py
doc/: API.md  PLUGIN_SYSTEM.md  TUI.md  WEB_UI.md
docs/: API.md  ARCHITECTURE_DEVELOPMENT_PLAN.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  PRIVILEGE_ESCALATION_DESIGN.md  SPEC.md  plan.md  详细设计文档.md
frontend/: app.css  app.js  index.html
integration/: docker-compose.yml
scripts/: run_pg_integration_matrix.py
tests/: test_agent_api_server.py  test_agent_core.py  test_agent_memory.py  test_agent_tools.py  test_alert_daemon.py  test_alerting.py  test_alerting_notifiers.py  test_cli.py  test_cli_agent.py  test_cli_alert_rules.py  test_cli_daemon.py  test_cli_runtime_cleanup.py  test_cli_runtime_cleanup_daemon.py  test_collector_daemon.py  test_config_loader.py  test_diagnose.py  test_pg_collectors.py  test_pg_integration_docker.py  test_pg_integration_matrix.py  test_plugins.py  test_providers.py  test_retention.py  test_runtime_cleanup_report.py  test_sdk.py  test_storage.py  test_storage_retention.py  test_subagent.py  test_thresholds.py  test_tracing.py  test_tui.py  test_workflow_orchestrator.py
(+2 files in other folders)
