[project]
name = "dbk"
version = "0.1.0"
description = "Database Kernel observability AI Agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "DBK Team"}]
license = {text = "MIT"}
keywords = [
    "postgresql",
    "observability",
    "ai-agent",
    "database",
    "kernel",
    "runtime-metrics",
    "postgresql-monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "tomli>=2.0; python_version<'3.11'",
    "httpx>=0.25.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "fastapi>=0.109.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.27.0",
    "textual>=0.50.0",
    "psycopg2-binary>=2.9.9",
    "socksio>=1.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests",
    "types-aiofiles",
]

[project.scripts]
dbk = "dbk.cli:main"

[project.urls]
Homepage = "https://github.com/dbk-team/dbk"
Documentation = "https://github.com/dbk-team/dbk#readme"
Repository = "https://github.com/dbk-team/dbk"
Changelog = "https://github.com/dbk-team/dbk/blob/main/docs/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbk*"]

[tool.setuptools.package-data]
dbk = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP", "SIM", "B", "C4"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
